watched vs unwatched (not reporting on ignored repos yet).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "repo_watch"
-description = "Manage watched vs ignored github repositories."
+description = "Manage watched vs unwatched github repositories."
 version = "0.1.0"
 authors = ["Alex G Rice <alex@ricegeo.dev>"]
 edition = "2018"
